--- a/src/components/MoviesList/Moviecard/MovieCard.css
+++ b/src/components/MoviesList/Moviecard/MovieCard.css
@@ -5,3 +5,22 @@
 .movieCard img {
   width: 100%;
 }
+
+figure {
+  position: relative;
+  padding: 0;
+}
+
+.title {
+  color: white;
+  font-size: 15pt;
+  margin-bottom: 2%;
+  font-weight: 900;
+  float: left;
+  position: absolute;
+  bottom: 0;
+  text-shadow: 5px 5px 5px black;
+  background-color: rgba(128, 128, 128, 0.474);
+  width: 100%;
+  height: 15%;
+}
