--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,21 @@
 header {
-  font-family: 'Delicious Handrawn', cursive;
+  font-family: 'Bebas Neue', cursive;
   font-weight: 900;
-  width: 100%;
+  height: 70px;
   background-color: #880114;
+  display: flex;
+  align-items: center;
+  margin-top: 2%;
+  border-bottom: rgb(255, 217, 0) 5px solid;
 }
 
-header h1 {
-  padding: 2% 5%;
+h1 {
   margin: 0;
   color: white;
   font-size: 30pt;
+  padding: 3%;
+}
+
+.tomatillo {
+  height: 150px;
 }
