--- a/src/components/MoviesList/Moviecard/MovieCard.css
+++ b/src/components/MoviesList/Moviecard/MovieCard.css
@@ -1,26 +1,32 @@
-.movieCard {
-  width: 100%;
+img {
+  height: 100%;
 }
 
-.movieCard img {
-  width: 100%;
-}
-
-figure {
+.card {
+  height: 100%;
+  margin: 0%;
+  border: 5px white solid;
   position: relative;
-  padding: 0;
+  cursor: pointer;
 }
 
-.title {
-  color: white;
-  font-size: 15pt;
-  margin-bottom: 2%;
-  font-weight: 900;
-  float: left;
+figcaption {
   position: absolute;
-  bottom: 0;
-  text-shadow: 5px 5px 5px black;
-  background-color: rgba(128, 128, 128, 0.474);
-  width: 100%;
   height: 15%;
+  width: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.599), rgba(255, 255, 255, 0));
+  display: flex;
+}
+
+.overlay-cap {
+  padding: 5%;
+  color: white;
+  font-size: 25pt;
+  font-weight: 900;
+  font-family: Verdana, sans-serif;
+  text-shadow: 5px 5px 5px black;
+}
+
+.date {
+  font-size: 10pt;
 }
