--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,8 @@ header {
   background-color: #880114;
   display: flex;
   align-items: center;
-  margin: 2% 0;
+  justify-content: space-between;
+  margin: 3% 0;
   border-bottom: rgb(255, 217, 0) 5px solid;
 }
 
@@ -14,6 +15,12 @@ h1 {
   color: white;
   font-size: 30pt;
   padding: 3%;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  width: 50%;
 }
 
 .tomatillo {
