--- a/src/components/MoviesList/Moviecard/MovieCard.css
+++ b/src/components/MoviesList/Moviecard/MovieCard.css
@@ -1,6 +1,13 @@
 .movieCard {
   width: 100%;
   position: relative;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.movieCard:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
 }
 
 .movieCard img {
@@ -20,6 +27,12 @@
   display: flex;
   flex-direction: column;
   height: 40px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.movieCard:hover .overlay {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: black;
 }
 
 .title {
@@ -50,4 +63,5 @@
   position: absolute;
   z-index: 1;
 }
+
 
