fix: Hide search error and bar when in selected movie mode

--- a/src/components/Header/SearchBar/SearchBar.css
+++ b/src/components/Header/SearchBar/SearchBar.css
@@ -19,7 +19,8 @@ input {
 .clear-btn {
   font-family: 'Bebas Neue', cursive;
   background: none;
-  border: none;
+  border: 2px white solid;
+  padding: 1%;
   cursor: pointer;
   display: flex;
   align-items: center;
