--- a/src/components/Header/SearchBar/SearchBar.css
+++ b/src/components/Header/SearchBar/SearchBar.css
@@ -7,6 +7,8 @@ input {
 }
 
 .searchBar {
+  font-family: 'Bebas Neue', cursive;
+  font-weight: 900;
   display: flex;
   align-items: center;
   width: 50%;
