--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@ header {
   align-items: center;
   justify-content: space-between;
   margin: 2.5% 0;
-  border-bottom: 5px solid gold;
+  /* border-bottom: 5px solid gold; */
 }
 
 h1 {
@@ -32,3 +32,17 @@ h1 {
   color: gold;
   padding-right: 2%;
 }
+
+.bottom-border {
+  height: 10px;
+  margin-top: -3%;
+  margin-bottom: 3%;
+  background: linear-gradient(to right, gold 0%, gold 85%, white 90%, gold 95%, gold 100%);
+  background-size: 200% auto;
+  animation: shine 1s linear;
+  animation-iteration-count: 3;
+}
+
+@keyframes shine {
+    to { background-position: 200% center; }
+  }
