--- a/src/components/MoviesList/Moviecard/MovieCard.css
+++ b/src/components/MoviesList/Moviecard/MovieCard.css
@@ -3,6 +3,7 @@
   position: relative;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  opacity: 100%;
 }
 
 .movieCard:hover {
@@ -63,5 +64,3 @@
   position: absolute;
   z-index: 1;
 }
-
-
