--- a/src/components/MoviesList/Moviecard/MovieCard.css
+++ b/src/components/MoviesList/Moviecard/MovieCard.css
@@ -1,5 +1,6 @@
 .movieCard {
   width: 100%;
+  height: 100%;
   position: relative;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
@@ -63,4 +64,8 @@
   padding: 0.5rem;
   position: absolute;
   z-index: 1;
+}
+
+.card-poster {
+  height: 100%;
 }
